--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth/core": "^0.37.4",
     "@auth/express": "^0.8.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.2",
     "nodemon": "^3.1.7",
     "ts-node-dev": "^2.0.0",
